# email_task

./: .gitignore  README.md  pyproject.toml
Analysis/: analysis.md  design_analysis.md
Design/: design.md
src/email_task/: __init__.py
src/email_task/core/: __init__.py  types.py
src/email_task/features/: __init__.py
src/email_task/features/find_pairs/: __init__.py  formatter.py  handler.py  parser.py  strategies.py
src/email_task/shared/: __init__.py  domain.py  errors.py  result.py
task/: task.md
tests/: __init__.py  test_result.py  test_strategies.py
