[project]
name = "email-task"
version = "0.1.0"
description = "Add your description here"
readme = "Task/task.md"
authors = [
    { name = "Markus Iorio", email = "teilen-01-koralle@icloud.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
