[project]
name = "email-task"
version = "0.1.0"
description = "Console application to find unique pairs with the same sum in an unsorted array"
readme = "Task/task.md"
authors = [
    { name = "Markus Iorio", email = "teilen-01-koralle@icloud.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
email-task = "email_task:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]
